tests/baselines/reference/declarationEmitRelativeModuleError.errors.txt
tests/cases/compiler/declarationEmitRelativeModuleError.ts(5,16): error TS2436: Ambient module declaration cannot specify relative module name.


==== tests/cases/compiler/declarationEmitRelativeModuleError.ts (1 errors) ====
    declare module "b:block" { // <-- no error anymore
        
    }
    
    declare module "b:/block" { // <-- still an error
                   ~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        
    }